--- a/jit/Cargo.toml
+++ b/jit/Cargo.toml
@@ -11,9 +11,9 @@ lto = "fat"
 panic = "abort"
 
 [dependencies]
-rust = { git = "https://github.com/soundsonacid/jit-proxy", commit = "3c7bbaf" }
+rust = { git = "https://github.com/drift-labs/jit-proxy", commit = "b3c3ed0" }
 solana-sdk = "1.14.16"
-drift-sdk = { git = "https://github.com/soundsonacid/drift-rs", commit = "9499f00" }
+drift-sdk = { git = "https://github.com/drift-labs/drift-rs", commit = "755d40d" }
 tokio = { version = "1.35.1", features = ["full"] }
 drift = { git = "https://github.com/drift-labs/protocol-v2.git", commit = "2bbe28c", features = ["mainnet-beta"]}
 dotenv = "0.15.0"
